# workmesh

./: .gitignore  .workmesh.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.json  README.md
.codex/skills/workmesh-cli/: SKILL.md
.github/workflows/: ci.yml  release.yml
backlog/tasks/: task-001 - phase 1 bootstrap workmesh repo and docs.md  task-002 - phase 1 rust workspace crate scaffolding.md  task-003 - phase 1 port task model parsing front matter body.md  task-004 - phase 1 implement cli read ops listshownextstatsexport.md  task-005 - phase 1 implement cli write ops set-statusfield labels deps notes.md  task-006 - phase 1 implement gantt output textfilesvg.md  task-007 - phase 1 implement mcp server rootless parity tools.md  task-008 - phase 1 rust parity tests fixtures.md  task-009 - phase 2 docs-first project model projectsinitiatives.md  task-010 - phase 3 sync engine adapters jiratrellogithub.md  task-011 - phase 3 dependency relationship model.md  task-012 - phase 3 ready work query climcp.md  task-013 - phase 3 assignee lease coordination.md  task-014 - phase 3 semantic audit log.md  task-015 - phase 3 id strategy collision handling.md  task-016 - phase 3 structured index rebuild.md  task-017 - phase 3 graph export command.md  task-018 - phase 3 auto index refresh on writes.md  task-018 - phase 4 external sync adapters jiratrellogithub.md  task-019 - phase 3 quickstart init command.md  task-020 - phase 3 jsonl issues export command.md  task-021 - phase 3 discovered-from helper.md  task-022 - phase 3 checkpoint dump command.md  task-023 - phase 3 resume command.md  task-024 - phase 3 working set file.md  task-025 - phase 3 session journal.md  task-026 - phase 3 auto checkpoint on write.md  task-027 - phase 3 diff since checkpoint.md  task-028 - bulk operations climcp.md  task-030 - add ide agent cli setup to readme.md
crates/workmesh-cli/: Cargo.toml  build.rs
crates/workmesh-core/: Cargo.toml
crates/workmesh-core/src/: archive.rs  audit.rs  backlog.rs  bootstrap.rs  config.rs  context.rs  doctor.rs  fix.rs  focus.rs  gantt.rs  global_sessions.rs  id_fix.rs  index.rs  initiative.rs  lib.rs  migration.rs  migration_audit.rs  project.rs  quickstart.rs  rekey.rs  session.rs  skills.rs  storage.rs  sync.rs  task.rs  task_ops.rs  truth.rs  views.rs  workstreams.rs  worktrees.rs
crates/workmesh-core/tests/: backlog.rs  focus.rs  gantt.rs  global_sessions.rs  index.rs  load_tasks_with_archive.rs  project_docs.rs  sync.rs  validate.rs
crates/workmesh-mcp/: Cargo.toml  build.rs
crates/workmesh-mcp-server/: Cargo.toml
crates/workmesh-mcp-server/src/: lib.rs  tools.rs
crates/workmesh-mcp/src/: main.rs  tools.rs  version.rs
crates/workmesh-mcp/tests/: cli_mcp_parity.rs  mcp_integration.rs
crates/workmesh-render/: Cargo.toml
crates/workmesh-service/: Cargo.toml  build.rs
crates/workmesh-service/src/: auth.rs  config.rs  http.rs  main.rs  mcp_http.rs  model.rs  read_model.rs  server.rs  state.rs  templates.rs  toolhost.rs  ws.rs
crates/workmesh-service/src/assets/: app.css  app.js
crates/workmesh-tools/: Cargo.toml
docker/workmesh-service/: Dockerfile  README.md  docker-compose.yml  service.toml.example
docs/: README.md  architecture.md  getting-started.md  test-coverage.md
docs/diagrams/: application-architecture-overview.puml  application-execution-paths.puml  application-state-topology.puml  continuity.puml  dx-workflow.puml  install-and-mcp.puml  task-lifecycle.puml
docs/reference/: commands.md  service.md
docs/setup/: run-modes-and-agent-mcp.md
scripts/: ci_core_coverage_gate.sh
skills/workmesh/: SKILL.md
skills/workmesh-cli/: SKILL.md
skills/workmesh-mcp/: SKILL.md
workmesh/tasks/: task-001 - phase 1 bootstrap workmesh repo and docs.md  task-002 - phase 1 rust workspace crate scaffolding.md  task-003 - phase 1 port task model parsing front matter body.md  task-008 - phase 1 rust parity tests fixtures.md  task-009 - phase 2 docs-first project model projectsinitiatives.md  task-011 - phase 3 dependency relationship model.md  task-012 - phase 3 ready work query climcp.md  task-013 - phase 3 assignee lease coordination.md  task-015 - phase 3 id strategy collision handling.md  task-017 - phase 3 graph export command.md  task-019 - phase 3 quickstart init command.md  task-020 - phase 3 jsonl issues export command.md  task-021 - phase 3 discovered-from helper.md  task-023 - phase 3 resume command.md  task-024 - phase 3 working set file.md  task-029 - bulk alias mcp config wiring.md  task-031 - default root dir workmesh migration prompt.md  task-032 - archive command with date-based folders.md  (+134 more)
(+147 files in other folders)
