[package]
name = "workmesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
chrono.workspace = true
shell-words = "1.1"
which = "6.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.12"
