[package]
name = "workmesh-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
rust-mcp-sdk = { version = "0.8.3", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
shell-words = "1.1"
workmesh-core = { path = "../workmesh-core" }
workmesh-tools = { path = "../workmesh-tools" }
workmesh-render = { path = "../workmesh-render" }

[dev-dependencies]
tempfile = "3.12"
