[package]
name = "workmesh-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
rust-mcp-sdk = { version = "0.8.3", default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
shell-words = "1.1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
chrono.workspace = true
workmesh-core = { path = "../workmesh-core" }

[dev-dependencies]
tempfile = "3.12"
