[package]
name = "workmesh-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
toml.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
workmesh-core = { path = "../workmesh-core" }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.12"
tower = "0.5"
